force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/LLC_BI__Service_Mgmt_Detail__c.object-meta.xml
<CustomObject>
    <description>This object captures more information about a service and has the ability to tie it back to higher level details in Service Mgmt.</description>
    <label>Service Mgmt Detail</label>
    <nameField>
        <label>Service Mgmt Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Mgmt Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>