force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_EPA_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>cm_EPA_Assessment_Type__c</fullName>
    <description>This field is optional and manually selected when entering third party report detail about an EPA Assessment. The picklist options available are DEPENDENT on Order Type being set as EPA Assessment. If selected, allows for the dropdown values as shown in this picklist [ RSRA, Phase 1, Phase 2 ]</description>
    <inlineHelpText>Dependent on &quot;Order Type&quot; being set as EPA. Values are RSRA, Phase 1, and Phase 2</inlineHelpText>
    <label>EPA Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cm_Order_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSRA</fullName>
            </value>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Transaction Screen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>