force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Previous_Property_Use_s__c.field-meta.xml
<CustomField>
    <fullName>cm_Previous_Property_Use_s__c</fullName>
    <description>This field specifies the text value used to document previous use(s) of subject property. Value can have impact on report findings (e.g. Subject property was previously a Gas Station, thus ground water contamination is likely).</description>
    <label>Previous Property Use(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>