force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Property_Address__c.field-meta.xml
<CustomField>
    <fullName>cm_Property_Address__c</fullName>
    <description>This field is optional and specifies the subject property&apos;s address. It is automatically populated with the Property Address populated on the Collateral Mgmt record associated to the Service Mgmt.</description>
    <formula>LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__Street_Address__c&amp;&apos; &apos;&amp; LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__City__c&amp;&quot;, &quot;&amp;TEXT(LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__State__c)&amp;&apos; &apos;&amp;LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is optional and specifies the subject property&apos;s address. It is automatically populated with the Property Address populated on the Collateral Mgmt record associated to the Service Mgmt.</inlineHelpText>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>