force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Property_County__c.field-meta.xml
<CustomField>
    <fullName>cm_Property_County__c</fullName>
    <description>This field is optional and specifies the subject property&apos;s county. It is automatically populated with the Property County populated on the Collateral Mgmt record associated to the Service Mgmt.</description>
    <formula>LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property County</label>
    <type>Text</type>
</CustomField>