force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Property_Description__c.field-meta.xml
<CustomField>
    <fullName>cm_Property_Description__c</fullName>
    <description>This field is optional and describes the subject property. It is manually populated.</description>
    <label>Property Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>