force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Report_Rcvd__c.field-meta.xml
<CustomField>
    <fullName>cm_Report_Rcvd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Rcvd</label>
    <type>Checkbox</type>
</CustomField>