force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/cm_Zoning__c.field-meta.xml
<CustomField>
    <fullName>cm_Zoning__c</fullName>
    <description>This field is optional and specifies the of subject property&apos;s zoning type (Residential, Commercial, Industrial, Agriculture, etc.). It is manually populated.</description>
    <label>Zoning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>