force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/LLC_BI__Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Coverage_Amount__c</fullName>
    <description>The user populates this optional currency field to state the total amount the service covers. By default, this field is blank.</description>
    <inlineHelpText>Enter the total amount the service covers.</inlineHelpText>
    <label>Coverage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>