force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/LLC_BI__Occurrence_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Occurrence_Amount__c</fullName>
    <description>The user populates this optional currency field to determine how much money is given to the borrower per occurrence. By default, this field is blank.</description>
    <inlineHelpText>Enter the total amount per occurrence.</inlineHelpText>
    <label>Occurrence Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>