force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/LLC_BI__Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Policy_Number__c</fullName>
    <description>The system auto populates this optional text field to display the policy number associated with the service.</description>
    <inlineHelpText>Displays the policy number associated with the service.</inlineHelpText>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>