force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/MarketValueInterest__c.field-meta.xml
<CustomField>
    <fullName>MarketValueInterest__c</fullName>
    <label>Market Value Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leased fee</fullName>
            </value>
            <value>
                <fullName>Fee simple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>