force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/Zen_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Zen_Insurance_Company__c</fullName>
    <description>Dropdown list of Insurance Company names</description>
    <inlineHelpText>If the Insurance Company for this service is not in the dropdown list, please select &quot;Other&quot;.</inlineHelpText>
    <label>Insurance Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AIG Insurance</fullName>
            </value>
            <value>
                <fullName>Chubb Insurance</fullName>
            </value>
            <value>
                <fullName>Guardian Insurance</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual</fullName>
            </value>
            <value>
                <fullName>Lloyd&apos;s of London</fullName>
            </value>
            <value>
                <fullName>Mapfre Praico</fullName>
            </value>
            <value>
                <fullName>Multinational Insurance</fullName>
            </value>
            <value>
                <fullName>One Alliance</fullName>
            </value>
            <value>
                <fullName>Optima Seguros</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Travelers Indemnity</fullName>
            </value>
            <value>
                <fullName>Triple S</fullName>
            </value>
            <value>
                <fullName>United Surety</fullName>
            </value>
            <value>
                <fullName>Universal Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>