force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/fields/zen_Other_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>zen_Other_Insurance_Company__c</fullName>
    <description>Text field for inputting Insurance Company that is not defined in the picklist.</description>
    <inlineHelpText>Only fill in this field if the option for Insurance Company is &quot;Other&quot;</inlineHelpText>
    <label>Other Insurance Company</label>
    <length>250</length>
    <type>Text</type>
</CustomField>