force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/recordTypes/Attorney.recordType-meta.xml
<RecordType>
    <fullName>Attorney</fullName>
    <active>true</active>
    <description>Record Type to specify Attorney Service Mgmt Details</description>
    <label>Attorney</label>
</RecordType>