force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/recordTypes/Inspector.recordType-meta.xml
<RecordType>
    <fullName>Inspector</fullName>
    <active>true</active>
    <description>Record Type to specify Inspector Service Mgmt Details</description>
    <label>Inspector</label>
</RecordType>