force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <description>Custom Record Type for the Insurance Service Mgmt Details.</description>
    <label>Insurance</label>
</RecordType>