force-app/main/default/objects/LLC_BI__Service_Mgmt_Detail__c/recordTypes/Third_Party_Reports.recordType-meta.xml
<RecordType>
    <fullName>Third_Party_Reports</fullName>
    <active>true</active>
    <description>Record Type to specify Third Party Report Service Mgmt Details</description>
    <label>Third Party Reports</label>
</RecordType>